--- a/css.css
+++ b/css.css
@@ -5,6 +5,9 @@ body{
     margin: 0 auto;
     font-size: 1.5em;
     background-color: #4b3a7f;
+    background-image: url("img/fondo.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 h1{
     font-family: 'Permanent Marker',sans-serif;
@@ -52,6 +55,7 @@ div#personal {
     background-color: #363636;
     width: 1000px;
     color: white;
+    border: 2px solid white;
 }
 
 div#formacion {
@@ -60,6 +64,7 @@ div#formacion {
     width: 1000px;
     color: white;
     padding-top: 10px;
+    border: 2px solid white;
 }
 div#publicaciones {
     margin: 0 auto;
@@ -67,8 +72,21 @@ div#publicaciones {
     width: 1000px;
     color: white;
     padding-top: 10px;
+    border: 2px solid white;
+}
+div#experiencia {
+    margin: 0 auto;
+    background-color: #363636;
+    width: 1000px;
+    color: white;
+    padding-top: 10px;
+    border: 2px solid white;
 }
 
+div#contacto {
+    background-color: black;
+    padding-left: 350px;
+}
 table{
     width: 1000px;
 }
@@ -78,6 +96,32 @@ table#publi{
     border-collapse: collapse;
 }
 
+div#asico {
+    width: 334px;
+    height: 340px;
+    background-image: url("img/posit.png");
+    background-repeat: no-repeat;
+    color: black;
+    padding: 7px;
+    margin: 0 auto;
+}
+
+div#entrenador {
+    width: 334px;
+    height: 340px;
+    background-image: url("img/posit.png");
+    background-repeat: no-repeat;
+    color: black;
+    padding: 7px;
+    margin: 0 auto;
+}
+
+#asico p,#entrenador p {
+    padding-left: 20px;
+}
+#asicoinf {
+    text-decoration-line: none;
+}
 table.formacion {
     width: 880px;
 }
@@ -194,7 +238,7 @@ p#lasalle,p#Camino,p#Bosco,small {
     margin-left: 10px;
 }
 
-td[colspan='2']{
+td#informacion{
     padding-top: 30px;
 }
 .fecha {
@@ -222,6 +266,7 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: #333;
+    border: 2px solid white;
 }
 table#publi td {
     padding: 20px;
@@ -233,6 +278,7 @@ a:hover{
 }
 li {
     float: left;
+    border: 1px solid white;
 }
 
 li a {
@@ -249,4 +295,52 @@ li a:hover {
 
 .activo {
     background-color: red;
+}
+td#boton {
+    padding-left: 350px;
+}
+button {
+    width: 150px;
+    height: 50px;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+}
+
+table#formulario{
+    color: black;
+    background-color: darkgray;
+    width: 970px;
+}
+input[id="name"] {
+    width: 400px;
+    height: 30px;
+    font-size: 18px;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    padding-left: 5px;
+}
+input[id="email"] {
+    width: 400px;
+    height: 30px;
+    font-size: 18px;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    padding-left: 5px;
+}
+textarea {
+    width: 400px;
+    height: 100px;
+    font-size: 14px;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    padding-left: 5px;
+    padding-top: 5px;
+}
+button:hover {
+    background-color: #a000ff;
+    color: white;
 }
